# quantshit

./: .env.example  .env.paper  .env.production  .env.production.example  .env.template  .env.vercel  .gitignore  .vercelignore  API_DOCS.md  API_SETUP.md  CLAUDE.md  CLEANUP_COMPLETED.md  CLOUD_DEPLOYMENT.md  CLOUD_READY.md  DATABASE_SETUP.md  DEPLOYMENT.md  Dockerfile  MIGRATION_COMPLETE.md  PHASE1_COMPLETE.md  QUICKSTART.md  QUICKSTART_DEMO.txt  README.md  STATUS.md  STRATEGY_CONFIG_SUMMARY.md  VERCEL_DEPLOY.md  VERCEL_DEPLOYMENT_GUIDE.md  WARP.md  api.py  check_endpoints.py  cron_jobs.txt  dashboard.html  database_schema.sql  demo.py  demo_expiry.py  demo_multi_strategy.py  demo_positions.py  deploy.ps1  deploy.py  deploy.sh  dev.py  (+30 more)
api/: __init__.py  api_handlers.py  app.py  database.py  health.py  index.py  main.py  supabase_client.py  test.py
api/routes/: arbitrage.py  health.py  markets.py  portfolio.py
config/: settings.py  strategies.conf
cpp/: CMakeLists.txt  README.md
cpp/benchmarks/: latency_benchmark.cpp  queue_benchmark.cpp
cpp/bindings/: python_module.cpp
cpp/core/: cpu_utils.cpp  cpu_utils.hpp  lock_free_queue.cpp  lock_free_queue.hpp  timing.cpp  timing.hpp
cpp/engine/: arbitrage_detector.cpp  arbitrage_detector.hpp  execution_engine.cpp  execution_engine.hpp  market_data_handler.cpp  market_data_handler.hpp  order_router.cpp  order_router.hpp
cpp/network/: market_protocol.cpp  market_protocol.hpp  packet_normalizer.cpp  packet_normalizer.hpp  zmq_transport.cpp  zmq_transport.hpp
cpp/tests/: test_lock_free_queue.cpp  test_zmq_transport.cpp
demo/: .env.demo  DEMO_SUMMARY.md  README.md  backtester.py  data_generator.py  demo_runner.py  kalshi_markets.json  polymarket_markets.json  run_demo.bat  run_demo.sh  visualizer.py
deploy/aws/: deploy.sh  docker-compose.aws.yml  task-definition.json
deploy/azure/: deploy.sh
deploy/gcp/: cloudrun.yaml  deploy.sh
deprecated/: README.md  index.py
docs/: API.md  DATABASE_SYSTEM.md  DEVELOPER.md  FILTER_UPDATE_SUMMARY.md  KALSHI_FIX.md  MATCHING_REFACTOR_SUMMARY.md  MODULE_EXPLANATIONS.md  PAGINATION_IMPLEMENTATION.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SCANNER_FIX_SUMMARY.txt  SCANNER_RUN_SUMMARY.md  STRATEGY_CONFIG_REFACTOR.md  TESTING.md  TEST_SUITE_SUMMARY.md  TROUBLESHOOTING.md  VISUAL_FLOW.md
examples/: backtest_demo.py  custom_strategy_config.py  momentum_example.py  options_example.py
public/: index.html
quantshit/: __init__.py
quantshit/backtesting/: engine.py  models.py  portfolio.py
quantshit/momentum/: __init__.py  forecasting.py  indicators.py  trend_detection.py
quantshit/options/: __init__.py  black_scholes.py  market_data.py  risk_management.py  volatility.py
quantshit/strategies/: base.py  examples.py
scripts/: db_query.py  quick_backtest.py  quick_start.py  setup.py  test_strategy.py
shared/: enums.py  models.py
src/: README.md  __init__.py  adapters.py  main.py  scanner.py  types.py
src/api/: app.py
src/backtesting/: __init__.py  engine.py
src/collectors/: __init__.py  market_data_collector.py
src/config/: __init__.py  constants.py  environment.py  settings.py
src/coordinators/: __init__.py  execution_coordinator.py  trading_orchestrator.py
src/core/: __init__.py  config.py  database.py  enums.py  framework_integration.py  logger.py  trading_logger.py  types.py
src/data/: __init__.py  framework.py  providers.py
src/database/: __init__.py  repository.py  schema.py  sqlite_repository.py  supabase_client.py
src/engine/: __init__.py  bot.py  capital_manager.py  directional_executor.py  event_driven.py  executor.py  position_manager.py
src/exchanges/: __init__.py  base.py
src/exchanges/kalshi/: __init__.py  client.py  parser.py
src/exchanges/polymarket/: __init__.py  client.py  parser.py
src/execution/: __init__.py  engine.py  framework.py
src/executors/: __init__.py  order_executor.py
src/frontend/: __init__.py  dashboard.py
src/models/: __init__.py  market.py  opportunity.py  order.py  position.py
src/modules/: __init__.py  nlp.py  statistics.py
src/monitoring/: __init__.py  health.py
src/risk/: __init__.py  manager.py
src/services/: __init__.py
src/services/execution/: __init__.py  executor.py  validator.py
src/services/matching/: __init__.py  matcher.py  opportunity_builder.py  pricing.py  scorer.py  similarity.py  text_processing.py
src/services/monitoring/: __init__.py  alerter.py  tracker.py
src/strategies/: __init__.py  arbitrage.py  base.py  config.py  correlation.py  cross_platform.py  fixed_arbitrage.py  framework.py  planning.py  simple_arb.py
src/trackers/: __init__.py  portfolio_tracker.py
src/utils/: __init__.py  advanced_matching.py  decorators.py  logger.py  math.py
strategies/: __init__.py  arbitrage.py
tests/: __init__.py  conftest.py  run_tests.py  test_backtester.py  test_collectors.py  test_config.py  test_core_types.py  test_database.py  test_deployment.py  test_exchanges.py  test_execution.py  test_executors.py  test_health.py  test_integration.py  test_matching.py  test_models.py  test_monitoring.py  test_portfolio.py  test_position_manager.py  test_services.py  test_strategies.py  test_trackers.py  test_trading_orchestrator.py  test_types.py  test_utils.py
